Updated to work in my install

--- a/Forms/Forms.vbproj
+++ b/Forms/Forms.vbproj
@@ -216,6 +216,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
